--- a/src/components/OwlCarousel/owlCarouselStyle.css
+++ b/src/components/OwlCarousel/owlCarouselStyle.css
@@ -37,33 +37,34 @@
   margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
 }
 .embla__dot {
-  -webkit-tap-highlight-color: hsl(var(--border), 0.5);
+  /* -webkit-tap-highlight-color: hsl(var(--foreground), 0.5); */
   -webkit-appearance: none;
   appearance: none;
-  background-color: transparent;
+  background-color: hsl(var(--background));
   touch-action: manipulation;
   display: inline-flex;
   text-decoration: none;
   cursor: pointer;
   border: 0;
   padding: 0;
-  margin: 0;
-  width: 2.6rem;
-  height: 2.6rem;
+  margin: 2px;
+  width: 1rem;
+  height: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  opacity: 40%;
 }
-.embla__dot:after {
-  box-shadow: inset 0 0 0 0.2rem hsl(var(--border));
-  width: 1.2rem;
-  height: 1.2rem;
+/* .embla__dot:after {
+  box-shadow: inset 0 0 0 0.2rem hsl(var(--foreground));
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
   display: flex;
   align-items: center;
   content: "";
-}
-.embla__dot--selected:after {
-  box-shadow: inset 0 0 0 0.2rem hsl(var(--primary));
+} */
+.embla__dot--selected{
+  background-color: hsl(var(--primary));
 }
